# robot

./: Dockerfile  README.md
software/: Dockerfile
software/core/: control.py
software/sim/models/strollerbot/: model.config  model.sdf
wir_tutorial/: CMakeLists.txt  README.md  package.xml
wir_tutorial/launch/: turtlebot3_autorace.launch
wir_tutorial/src/: circle.py  teleop_robot.py
